[MT-4930] Fix regression of caret not being visible in Menu inputs

--- a/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
+++ b/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
@@ -30,6 +30,7 @@
     max-width: 100%;
     white-space: normal;
     position: relative;
+    caret-color: initial;
 
     &.alignLeft {
         margin-left: 0;
